--- a/src/data/grammar/vocab/verbs/verbs.yaml
+++ b/src/data/grammar/vocab/verbs/verbs.yaml
@@ -178,6 +178,16 @@
       "fasting for #count# [_time:days,weeks]#_time#",
       "drinking #liquid#",
       "sleeping in a hyperbaric chamber",
+      "always calling a bluff",
+      "playing “hide the salami” with a real salami",
+      "taking candy from a baby",
+      "procrastinating",
+      "flying under the radar",
+      "running from the law",
+      "speaking only in monotone",
+      "taking",
+      "wearing a hair shirt",
+      "loving, but not being *in love* with #miscPersonSingular#",
       "#nounActivity#",
       "#disqualifyingAction#",
       "#gameConcept#"
