--- a/src/data/grammar/headlines/clickbait.yaml
+++ b/src/data/grammar/headlines/clickbait.yaml
@@ -45,5 +45,5 @@ wackyCharacter:
 - "a group of [_desc:wisecracking,#mood#] [_group:hoodlums,teenagers,senior-citizens,improv comics,boat enthusiasts]#_group#"
 - "a boy with [_lifeBound:#count# months,#count# weeks][_what:#_lifeBound# to live,nothing to lose]#_what#"
 - "a swarm of [_insectAdjective:sentient,psychic,intelligent,enormous][_flyingInsects:gnats,moths,bees,mosquitoes,beetles,hermit crabs]#_insectAdjective# #_flyingInsects#"
-- "[_num:No,One,Two,#count.capitalize#][_hometown:Cincinatti,Toledo,Buffalo,Friscom,Hollywood,Uptown,Topeka,Kansas][_maleAdjective:Stinky,Big,Corduroy,Teflon,Yukon,Rodeo,Klondike,Three-Finger,Whiskey,Sly,Calamity,Greasy,Calico,Slippin',“#massNoun.capitalize#”,#_hometown#,#_num#-#bodypart.capitalize#][_name:Pete,Jeff,Craig,Jimmy,Jack,Nick,Rhonda,Sally,Irene,Zelda,Megan]#_maleAdjective# #_name#"
+- "#colorfulLocal#"
 - "[_adj:#mood#,#mood#,#mood#,undercover,smarmy,extremely confused,foolhardy,depraved,shady,crafty,wide-eyed,troubled,deranged,delirious,timid][_what:robot,child,nun,schoolteacher,preacher,gentleman,con man,gigolo,leprechaun,recluse,fortune-teller,#characterClass#]#_adj.a# #_what#"
