first names and nicknames; joke creature names; layout fixes

--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -1,6 +1,152 @@
 colorfulLocal: |
   [_num:No,One,Two,#count.capitalize#]
   [_hometown:Cincinatti,Toledo,Buffalo,Frisco,Hollywood,Uptown,Topeka,Kansas]
-  [_adjective:Stinky,Big,Corduroy,Teflon,Yukon,Rodeo,Klondike,Three-Finger,Whiskey,Sly,Calamity,Greasy,Calico,Slippin',“#massNoun.capitalize#”,#_hometown#,#_num#-#bodypart.capitalize#]
-  [_name:Pete,Jeff,Craig,Jimmy,Jack,Nick,Rhonda,Sally,Irene,Zelda,Megan]
+  [_adjective:Stinky,Big,Wolfman,Corduroy,Teflon,Yukon,Rodeo,Klondike,Diamond,Whiskey,Sly,Calamity,Greasy,Calico,Slippin',Aunt,Uncle,Cousin,Tall,Lil',“#massNoun.capitalize#”,#_hometown#,#_num#-#bodypart.capitalize#]
+  [_name:Pete,Jeff,Craig,Jimmy,Jack,Nick,Rhonda,Sally,Irene,Zelda,Megan,#firstName#,#firstName#,#firstName#]
   #_adjective# #_name#
+
+firstName:
+- Hank
+- Reggie
+- Annabel
+- Gilbert
+- Dennis
+- Crystal
+- Pandora
+- Molly
+- Luanne
+- Enoch
+- Nguyet
+- Pearlene
+- Gertrude
+- Percy
+- Luigi
+- Ursula
+- Quentin
+- Cornelius
+- Francis
+- Nicky
+- Yancy
+- Yolanda
+- Harris
+- Trudy
+- Dabney
+- Truman
+- Oscar
+- Elwood
+- Drew
+- Jordan
+- Logan
+- Shirley
+- Sasha
+- Evelyn
+- Robin
+- Bailey
+- Jamie
+- Sidney
+- Taylor
+- Morgan
+- Bernie
+- Mel
+- Jesse
+- Cameron
+- Max
+- Meredith
+- Lindsay
+- Ashley
+- Beverly
+- Blaine
+- Andy
+- Carson
+- Jules
+- Kyle
+- Mason
+- Rudy
+- Rory
+- Brady
+- Spencer
+- Carmen
+- Tatum
+- Charlie
+- Frankie
+- Elvis
+- Keanu
+- Shaquille
+- Kobe
+- Ringo
+- Kanye
+- Engelbert
+- Tracy
+- Buddy
+- Aubrey
+- Krishna
+- Randy
+- Helga
+- Irwin
+- Mimi
+- Dana
+- Helen
+- Maurice
+- Günther
+- Rufus
+- Penny
+- Rusty
+- Brooklyn
+- Bruno
+- Schubert
+- Tarzan
+- Ziggy
+- Guy
+- Napoleon
+
+
+genericNickname:
+- Stubby
+- Shifty
+- Spidey
+- Bones
+- Fatty
+- Junior
+- Smokey
+- Nails
+- Lefty
+- Bobo
+- Sparky
+- Baby Face
+- Smiley
+- Slim
+- Tootsie
+- Sweetpea
+- Rooster
+- Banjo
+- Pipsqueak
+- Wizard
+- Mad Dog
+- Iceman
+- Newt
+- Bugsy
+- Munchkin
+- Venus
+- Smalls
+- Bulldog
+- Snowball
+- Goddess
+- Bomber
+- Pee Wee
+- Knuckles
+- Hot Rod
+- Stretch
+- Lucky
+- Gizmo
+- Pinky
+- Crazy Legs
+- Moose
+- Princess
+- Ratchet
+- Bowser
+- Fester
+- Gooch
+- Duke
+- Jeeves
+- Pac-Man
+- Precious
