--- a/src/data/grammar/images/svg-streamer-showdown.yaml
+++ b/src/data/grammar/images/svg-streamer-showdown.yaml
@@ -8,16 +8,21 @@ _showdownBackgroundImageFile: "#_showdownBackgroundImageDirPath#/bg#_showdownBac
 
 # search for legendary creatures
 
+# search for creatures and change names ("wall of" → Wall of #pluralNounOrMassNoun#; "subtype:wizard" →  #noun# Mage, legendary creature types)
+
+cardQueryWallOf: '[_customQuery:name="Wall of"][#_customQuery.cardSearchCustomQuery(1)#][_cardName:#_cardName1#]#_cardName# → Wall of #pluralNounOrMassNoun.capitalizeAll#'
+
+
 cardFinderChooseEightCreatures: |
   [_searchTerm:"creature"][#_searchTerm.cardSearchByType(8)#]
-  [_card1:#_cardRawName1#][_cardname:#_cardRawName1#][_cardfamiliarname:#_cardFamiliarName1#][_cardDisplayName1:#_cardDisplayName#]
-  [_card2:#_cardRawName2#][_cardname:#_cardRawName2#][_cardfamiliarname:#_cardFamiliarName2#][_cardDisplayName2:#_cardDisplayName#]
-  [_card3:#_cardRawName3#][_cardname:#_cardRawName3#][_cardfamiliarname:#_cardFamiliarName3#][_cardDisplayName3:#_cardDisplayName#]
-  [_card4:#_cardRawName4#][_cardname:#_cardRawName4#][_cardfamiliarname:#_cardFamiliarName4#][_cardDisplayName4:#_cardDisplayName#]
-  [_card5:#_cardRawName5#][_cardname:#_cardRawName5#][_cardfamiliarname:#_cardFamiliarName5#][_cardDisplayName5:#_cardDisplayName#]
-  [_card6:#_cardRawName6#][_cardname:#_cardRawName6#][_cardfamiliarname:#_cardFamiliarName6#][_cardDisplayName6:#_cardDisplayName#]
-  [_card7:#_cardRawName7#][_cardname:#_cardRawName7#][_cardfamiliarname:#_cardFamiliarName7#][_cardDisplayName7:#_cardDisplayName#]
-  [_card8:#_cardRawName8#][_cardname:#_cardRawName8#][_cardfamiliarname:#_cardFamiliarName8#][_cardDisplayName8:#_cardDisplayName#]
+  [_card1:#_cardRawName1#][_cardname:#_cardRawName1#][_cardfamiliarname:#_cardFamiliarName1#][_creaturetype:#_cardSomeCreatureType1#][_cardDisplayName1:#_cardDisplayName#]
+  [_card2:#_cardRawName2#][_cardname:#_cardRawName2#][_cardfamiliarname:#_cardFamiliarName2#][_creaturetype:#_cardSomeCreatureType2#][_cardDisplayName2:#_cardDisplayName#]
+  [_card3:#_cardRawName3#][_cardname:#_cardRawName3#][_cardfamiliarname:#_cardFamiliarName3#][_creaturetype:#_cardSomeCreatureType3#][_cardDisplayName3:#_cardDisplayName#]
+  [_card4:#_cardRawName4#][_cardname:#_cardRawName4#][_cardfamiliarname:#_cardFamiliarName4#][_creaturetype:#_cardSomeCreatureType4#][_cardDisplayName4:#_cardDisplayName#]
+  [_card5:#_cardRawName5#][_cardname:#_cardRawName5#][_cardfamiliarname:#_cardFamiliarName5#][_creaturetype:#_cardSomeCreatureType5#][_cardDisplayName5:#_cardDisplayName#]
+  [_card6:#_cardRawName6#][_cardname:#_cardRawName6#][_cardfamiliarname:#_cardFamiliarName6#][_creaturetype:#_cardSomeCreatureType6#][_cardDisplayName6:#_cardDisplayName#]
+  [_card7:#_cardRawName7#][_cardname:#_cardRawName7#][_cardfamiliarname:#_cardFamiliarName7#][_creaturetype:#_cardSomeCreatureType7#][_cardDisplayName7:#_cardDisplayName#]
+  [_card8:#_cardRawName8#][_cardname:#_cardRawName8#][_cardfamiliarname:#_cardFamiliarName8#][_creaturetype:#_cardSomeCreatureType8#][_cardDisplayName8:#_cardDisplayName#]
 
 _cardDisplayName:
 - "#_cardname#"
@@ -27,17 +32,11 @@ _cardDisplayName:
 - "#_cardname#"
 - "#_cardname#"
 - "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
-- "#_cardname#"
 - "#_cardfamiliarname#"
-- "[_variation:Big #_cardname#,Baby #_cardname#,“#adj#” #_cardname#,#_cardname#,#_cardname# Sr.,#_cardname#, Jr.]#_variation#"
-
+- "[_firstname:#firstName#,#genericNickname#][_veryCharacteristic:#adjPersonCharacteristic#,very #adjPersonCharacteristic#][_veryMoody:#mood#,very #mood#][_variation:Some #_creaturetype#,Another #_creaturetype#,#_veryCharacteristic.capitalizeAll.a# #_creaturetype#,#_veryMoody.capitalizeAll.a# #_creaturetype#,#_creaturetype.a# named #_firstname#,#_firstname# the #_creaturetype#,#_creaturetype.a#]#_variation.capitalize#"
+- "[_variation:Big #_cardname#,Baby #_cardname#,“#adj.capitalizeAll#” #_cardname#,“#genericNickname#” (#_cardname#),#_cardname##comma# a.k.a. “#genericNickname#”,#_cardname#,#_cardname##comma# Sr.,#_cardname##comma# Jr.]#_variation#"
+- "[_variation:#firstName#,#firstName#,#genericNickname#,“#genericNickname#”]#_variation#"
+- "#colorfulLocal#"
 
 svgStreamerNameStyle: >
   color: white;
@@ -46,7 +45,6 @@ svgStreamerNameStyle: >
   font-weight: 600; text-shadow: 1px 1px 1px black; text-align:center;
   font-size: 16px; line-height: 16px;   
 
-
 svgStreamerNameStyleParagraph: >
   display: table-cell; 
   vertical-align: top; 
@@ -54,47 +52,47 @@ svgStreamerNameStyleParagraph: >
 
 
 svgEightPersonShowdownPosition: |
-  [_text1x:20][_text1y:160][_text1w:180][_text1h:50]
-  [_text2x:220][_text2y:160][_text2w:180][_text2h:50]
-  [_text3x:420][_text3y:160][_text3w:180][_text3h:50]
-  [_text4x:620][_text4y:160][_text4w:180][_text4h:50]
-  [_text5x:20][_text5y:360][_text5w:180][_text5h:50]
-  [_text6x:220][_text6y:360][_text6w:180][_text6h:50]
-  [_text7x:420][_text7y:360][_text7w:180][_text7h:50]
-  [_text8x:620][_text8y:360][_text8w:180][_text8h:50]
+  [_text1x:20][_text1y:160][_text1w:180][_text1h:60]
+  [_text2x:220][_text2y:160][_text2w:180][_text2h:60]
+  [_text3x:420][_text3y:160][_text3w:180][_text3h:60]
+  [_text4x:620][_text4y:160][_text4w:180][_text4h:60]
+  [_text5x:20][_text5y:360][_text5w:180][_text5h:60]
+  [_text6x:220][_text6y:360][_text6w:180][_text6h:60]
+  [_text7x:420][_text7y:360][_text7w:180][_text7h:60]
+  [_text8x:620][_text8y:360][_text8w:180][_text8h:60]
 
 svgShowdown: |
   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="820" height="420">
     <defs>
       <mask id="cardArtMask" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="0" y="0" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="0" y="0" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask2" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="200" y="0" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="200" y="0" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask3" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="400" y="0" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="400" y="0" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask4" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="600" y="0" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="600" y="0" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
 
       <mask id="cardArtMask5" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="0" y="200" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="0" y="200" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask6" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="200" y="200" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="200" y="200" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask7" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="400" y="200" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="400" y="200" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask>
       <mask id="cardArtMask8" maskUnits="userSpaceOnUse" mask-type="alpha">
-        <image x="600" y="200" width="223" height="310" xlink:href="./data/images/card-art-mask.png" />
+        <image x="600" y="200" width="226" height="318" xlink:href="./data/images/card-art-mask.png" />
       </mask> 
 
     </defs>
     <image width="100%" height="100%" xlink:href="#_showdownBackgroundImageFile#" />    
-    <image width="223" height="310" xlink:href="#cardFinder##_card1#" x="0" y="0" mask="url(\#cardArtMask)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card1#" x="0" y="0" mask="url(\#cardArtMask)" />
     <foreignObject x="#_text1x#" y="#_text1y#" width="#_text1w#" height="#_text1h#">
       <div style="width: #_text1w#px; height: #_text1h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -104,7 +102,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card2#" x="200" y="0" mask="url(\#cardArtMask2)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card2#" x="200" y="0" mask="url(\#cardArtMask2)" />
     <foreignObject x="#_text2x#" y="#_text2y#" width="#_text2w#" height="#_text2h#">   
       <div style="width: #_text2w#px; height: #_text2h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -114,7 +112,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card3#" x="400" y="0" mask="url(\#cardArtMask3)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card3#" x="400" y="0" mask="url(\#cardArtMask3)" />
     <foreignObject x="#_text3x#" y="#_text3y#" width="#_text3w#" height="#_text3h#">   
       <div style="width: #_text3w#px; height: #_text3h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -124,7 +122,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card4#" x="600" y="0" mask="url(\#cardArtMask4)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card4#" x="600" y="0" mask="url(\#cardArtMask4)" />
     <foreignObject x="#_text4x#" y="#_text4y#" width="#_text4w#" height="#_text4h#">   
       <div style="width: #_text4w#px; height: #_text4h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -134,7 +132,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card5#" x="0" y="200" mask="url(\#cardArtMask5)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card5#" x="0" y="200" mask="url(\#cardArtMask5)" />
     <foreignObject x="#_text5x#" y="#_text5y#" width="#_text5w#" height="#_text5h#">   
       <div style="width: #_text5w#px; height: #_text5h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -144,7 +142,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card6#" x="200" y="200" mask="url(\#cardArtMask6)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card6#" x="200" y="200" mask="url(\#cardArtMask6)" />
     <foreignObject x="#_text6x#" y="#_text6y#" width="#_text6w#" height="#_text6h#">   
       <div style="width: #_text6w#px; height: #_text6h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -154,7 +152,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card7#" x="400" y="200" mask="url(\#cardArtMask7)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card7#" x="400" y="200" mask="url(\#cardArtMask7)" />
     <foreignObject x="#_text7x#" y="#_text7y#" width="#_text7w#" height="#_text7h#">   
       <div style="width: #_text7w#px; height: #_text7h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
@@ -164,7 +162,7 @@ svgShowdown: |
         </div>
       </div>
     </foreignObject>
-    <image width="223" height="310" xlink:href="#cardFinder##_card8#" x="600" y="200" mask="url(\#cardArtMask8)" />
+    <image width="226" height="318" xlink:href="#cardFinder##_card8#" x="600" y="200" mask="url(\#cardArtMask8)" />
     <foreignObject x="#_text8x#" y="#_text8y#" width="#_text8w#" height="#_text8h#">   
       <div style="width: #_text8w#px; height: #_text8h#px; overflow: hidden; display:table;">
         <div xmlns="http://www.w3.org/1999/xhtml" style="#svgStreamerNameStyle# display: table-cell; vertical-align: middle; text-align: center; padding: 2px;">
